# dagster-community-components-cli

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
examples/: README.md  airports_cluster.md  arxiv_pdf.md  books_scraper.md  cars_sql.md  churn.md  cities_distance.md  countries.md  earthquakes.md  github_jsonpath.md  hn_rss.md  hn_xml.md  iris_clusters.md  iris_pca.md  partitioned_earthquakes.md  passengers_forecast.md  penguins.md  releases.md  retail_ltv.md  retail_segments.md  revenue_attribution.md  saas_metrics.md  setup_airports_cluster_demo.sh  setup_arxiv_pdf_demo.sh  setup_books_scraper_demo.sh  setup_cars_sql_demo.sh  setup_churn_demo.sh  setup_cities_distance_demo.sh  setup_countries_demo.sh  setup_earthquakes_demo.sh  setup_github_jsonpath_demo.sh  setup_hn_rss_demo.sh  setup_hn_xml_demo.sh  setup_iris_clusters_demo.sh  setup_iris_pca_demo.sh  setup_movies_sql_demo.sh  setup_partitioned_earthquakes_demo.sh  setup_passengers_forecast_demo.sh  setup_penguins_demo.sh  setup_releases_demo.sh  (+25 more)
src/dagster_component_cli/: __init__.py  cli.py  installer.py  project.py  registry.py  templates.py
tests/: test_cli.py
