[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dagster-community-components-cli"
version = "0.4.0"
description = "CLI to search, install, and manage Dagster community components."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Thomas", email = "eric.thomas@dagsterlabs.com" },
]
keywords = ["dagster", "components", "cli", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "build>=1.0",
]

[project.scripts]
dagster-component = "dagster_component_cli.cli:main"

[project.urls]
Homepage = "https://dagster-component-ui.vercel.app/"
Registry = "https://github.com/eric-thomas-dagster/dagster-component-templates"
Repository = "https://github.com/eric-thomas-dagster/dagster-community-components-cli"
Issues = "https://github.com/eric-thomas-dagster/dagster-community-components-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_component_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
